Fixed comment spacing

--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -159,3 +159,7 @@ input {
     align-content: center;
     text-align: center;
 }
+fieldset {
+    align-content: center;
+    text-align: center;
+}
